--- a/package.json
+++ b/package.json
@@ -10,22 +10,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.0",
-    "@angular/cdk": "^19.2.0",
-    "@angular/common": "^19.2.0",
-    "@angular/compiler": "^19.2.0",
-    "@angular/core": "^19.2.0",
-    "@angular/forms": "^19.2.0",
-    "@angular/localize": "^19.2.0",
-    "@angular/material": "^19.2.0",
-    "@angular/material-moment-adapter": "^19.2.0",
-    "@angular/platform-browser": "^19.2.0",
-    "@angular/platform-browser-dynamic": "^19.2.0",
-    "@angular/router": "^19.2.0",
-    "rxjs": "~7.8.0",
-    "moment": "^2.18.1",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "@angular/animations": "19.2.14",
+    "@angular/cdk": "19.2.18",
+    "@angular/common": "19.2.14",
+    "@angular/compiler": "19.2.14",
+    "@angular/core": "19.2.14",
+    "@angular/forms": "19.2.14",
+    "@angular/material": "19.2.18",
+    "@angular/material-luxon-adapter": "19.2.18",
+    "@angular/platform-browser": "19.2.14",
+    "@angular/platform-browser-dynamic": "19.2.14",
+    "@angular/router": "19.2.14",
+    "@azure/msal-angular": "4.0.12",
+    "@supercharge/promise-pool": "3.2.0",
+    "@types/luxon": "3.6.2",
+    "luxon": "3.6.1",
+    "ngx-highlightjs": "14.0.0",
+    "ngx-markdown": "19.1.1",
+    "rxjs": "7.8.2",
+    "tslib": "2.8.1",
+    "zone.js": "0.15.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.15",
