--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "19.2.14",
     "@azure/msal-angular": "4.0.12",
     "@supercharge/promise-pool": "3.2.0",
+    "@types/leaflet": "^1.9.19",
     "@types/luxon": "3.6.2",
+    "leaflet": "^1.9.4",
     "luxon": "3.6.1",
     "ngx-highlightjs": "14.0.0",
     "ngx-markdown": "19.1.1",
